エラーを最低限修正

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="resource/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="css/party.css" />
   <title>＠ぼっちぃー</title>
-  <script type="text/javascript" src="js/core.js" defer></script>
+  <script type="text/javascript" src="js/party.js" defer></script>
 </head>
 
 <body class="＠パーティーII">
